Validating sprint8