@@ -1,19 +1,52 @@
 package mapping;
 
 import java.lang.reflect.*;
+import jakarta.servlet.http.*;
+
+import util.Syntaxe;
 
 public class MyMapping {
 
     String className;
     Method method;
 
+    public void updateSession(Object invokingObj, HttpServletRequest request, int idField) throws Exception {
+        Field[] fields = invokingObj.getClass().getDeclaredFields();
+        Method method = invokingObj.getClass()
+                .getDeclaredMethod("get" + Syntaxe.getSetterNorm(fields[idField].getName()));
+        MySession mySession = (MySession) method.invoke(invokingObj);
+        HttpSession session = mySession.getSession();
+        HttpSession requestSession = request.getSession();
+        requestSession = session;
+    }
+
+    public int checkSession(Object invokingObj, HttpServletRequest request) throws Exception {
+        Field[] fields = invokingObj.getClass().getDeclaredFields();
+        for (int i = 0; i < fields.length; i++) {
+            if (fields[i].getType().equals(MySession.class)) {
+                Method method = invokingObj.getClass()
+                        .getDeclaredMethod("get" + Syntaxe.getSetterNorm(fields[i].getName()));
+                MySession mySession = (MySession) method.invoke(invokingObj);
+                mySession.setSession(request.getSession());
+                return i;
+            }
+        }
+        return -1;
+    }
+
     @SuppressWarnings("deprecation")
-    public Object invokeMethode() throws Exception {
+    public Object invokeMethode(HttpServletRequest request) throws Exception {
         Object answer = null;
         try {
             Class<?> clazz = Class.forName(this.getClassName());
             Method mConcerned = clazz.getDeclaredMethod(this.getMethod().getName());
-            answer = mConcerned.invoke(clazz.newInstance(), new Object[] {});
+
+            Object invokingObject = clazz.getDeclaredConstructor().newInstance();
+            int idField = this.checkSession(invokingObject, request);
+            if (idField != -1) {
+                this.updateSession(invokingObject, request, idField);
+            }
+            answer = mConcerned.invoke(invokingObject, new Object[] {});
         } catch (Exception e) {
             throw e;
         }
